--- a/config/services.neon
+++ b/config/services.neon
@@ -1,5 +1,5 @@
 services:
-    - App\Core\RouterFactory::createRouter
+    router: App\Core\RouterFactory::createRouter
 
     - App\Core\Api\Request\ServerRequestFactory
     - App\Core\Api\Response\ServerResponseFactory
