--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,9 @@
 		"tracy/tracy": "^2.10",
 		"league/openapi-psr7-validator": "^0.22.0",
 		"guzzlehttp/psr7": "^2.7",
-		"ramsey/uuid": "^4.7",
 		"contributte/api-router": "^6.0",
-		"firebase/php-jwt": "^6.11"
+		"firebase/php-jwt": "^6.11",
+		"robmorgan/phinx": "^0.16.7"
 	},
 	"require-dev": {
 		"roave/security-advisories": "dev-latest",
@@ -31,11 +31,14 @@
 		"symplify/easy-coding-standard": "^12.5",
 		"phpstan/phpstan": "^2.1",
 		"phpstan/phpstan-doctrine": "^2.0",
-		"phpstan/phpstan-nette": "^2.0"
+		"phpstan/phpstan-nette": "^2.0",
+		"mockery/mockery": "^1.6",
+		"dg/bypass-finals": "^1.9"
 	},
 	"autoload": {
 		"psr-4": {
-			"App\\": "app"
+			"App\\": "app",
+			"Test\\": "tests"
 		}
 	},
 	"minimum-stability": "stable",
